--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -105,11 +105,10 @@ body {
 
 .footer {
   margin-top: 50px;
-  text-align: center;
+  text-align: left;
   padding: 10px;
   font-size: 0.9em;
   background-color: #f8f9fa;
-  border-top: 1px solid #ddd;
   position: sticky;
 }
 .footer a {
